--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -131,7 +131,7 @@
                 android:id="@+id/fav_btn"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="@string/favorite"
+                android:text=""
                 app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="@id/tv_detail_name"
